# Drone_Following

./: .gitignore  ARCHITECTURE.md  BEST_PLAN_DATA_DRIVEN.md  CLAUDE.md  FOLLOW_CONTROL.md  PROJECT.md  README.md  RESULTS_ABLATION.md  RESULTS_ROBUSTNESS.md  V17_DESIGN.md  aux_train.py  benchmark.py  build_deploy.py  convert_coco_person.py  crowd_loc.py  demo_cam.py  density_aux.py  distillation.py  drone_follow.py  eval_coco.py  eval_robustness.py  export.py  infer.py  infer_pi5_sim.py  make_demo_video.py  plot_architecture.py  run_eval_coco.py  test_accuracy_onnx.py  train.py  train_v2.py  train_v3.py  trt_infer_engine.py  vib_consistency.py
backup_v17_baseline/: pfdet_nano_v17.py  train_config_v17_light.yaml  train_v3.py
configs/: quick_eval_v14.yaml  quick_eval_v15.yaml  train_config.yaml  train_config_v14.yaml  train_config_v14_light.yaml  train_config_v14_light_v7.yaml  train_config_v14_light_v8.yaml  train_config_v14_light_v9.yaml  train_config_v15.yaml  train_config_v15_balanced_teacher.yaml  train_config_v15_dgs_B.yaml  train_config_v15_dgs_C.yaml  train_config_v15_dgs_D.yaml  train_config_v15_light.yaml  train_config_v15_light_musgd.yaml  train_config_v15_light_musgd_v4.yaml  train_config_v15_vib_E.yaml  train_config_v16_light.yaml  train_config_v17_deploy.yaml  train_config_v17_light.yaml  train_config_v17_nms_free.yaml  visdrone_person_ultralytics.yaml
datasets/: __init__.py  visdrone_person.py
follow_drone/: README.md  config.yaml  main.py
jetson/: DEPLOY_GUIDE.md  bench_trt.py  build_trt_jetson.py  (+2 more)
jetson/control/: CMakeLists.txt  follow_px4.cpp
(+56 files in other folders)
